# integreat

./: README.org  integrate.cabal  integreat.cabal  stack.yaml
app/: Main.hs
src/: Cosine.hs  Integrate.hs  Load.hs  NetworkGeneration.hs  Print.hs  RandomWalk.hs  Types.hs  Utility.hs
src/Alignment/: CSRW.hs  Cosine.hs  RandomWalk.hs
src/Edge/: Aracne.hs  Correlation.hs
