name:                integrate
version:             0.1.0.2
synopsis:            Insert synopsis here
description:         Please see README.md
homepage:            http://github.com/GregorySchwartz/integrate#readme
license:             GPL-3
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          gsch@upenn.edu
copyright:           Copyright: (c) 2016 Gregory W. Schwartz
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Utility
                     , Load
                     , Edge.Correlation
                     , Edge.Aracne
                     , Alignment.Cosine
                     , Alignment.RandomWalk
                     , Alignment.CSRW
                     , Integrate
                     , Print
  build-depends:       base >= 4.7 && < 5
                     , hmatrix
                     , sequence
                     , parallel
                     , containers
                     , statistics
                     , vector
                     , vector-th-unbox
                     , random-fu
                     , mtl
                     , lens
                     , bytestring
                     , text
                     , text-show
                     , cassava
                     , fgl
                     , foldl
                     , aeson
                     , inline-r
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

executable integrate
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , integrate
                     , optparse-generic
                     , containers
                     , vector
                     , cassava
                     , text
                     , bytestring
                     , lens
                     , mtl
                     , inline-r
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GregorySchwartz/integrate
