name:                integrate
version:             0.2.0.10
synopsis:            Integrate different assays.
description:         Please see README.md
homepage:            http://github.com/GregorySchwartz/integrate#readme
license:             GPL-3
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          gsch@upenn.edu
copyright:           Copyright: (c) 2016 Gregory W. Schwartz
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Utility
                     , Load
                     , Edge.Correlation
                     , Edge.Aracne
                     , Alignment.Cosine
                     , Alignment.RandomWalk
                     -- , Alignment.CSRW
                     , Integrate
                     , Print
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , bytestring
                     , cassava
                     , containers
                     , fgl
                     , foldl
                     , hmatrix
                     , inline-r
                     , lens
                     , mtl
                     , mwc-random
                     , parallel
                     , random-fu
                     , sequence
                     , statistics
                     , stringsearch
                     , terminal-progress-bar
                     , text
                     , text-show
                     , vector
                     , vector-th-unbox
  ghc-options:         -O2
  default-language:    Haskell2010

executable integrate
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -O2
  build-depends:       base
                     , integrate
                     , optparse-generic
                     , containers
                     , vector
                     , cassava
                     , text
                     , bytestring
                     , lens
                     , mtl
                     , inline-r
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GregorySchwartz/integrate
